logs/Slang/chapter-7/arrays/dynamic/basic.sv.log
name: dyn-arr-basic
description: Test dynamic arrays support
should_fail: 0
tags: 7.5
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/dynamic/basic.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/dynamic/basic.sv:9:14: error: dimension requires a constant range
bit [7:0] arr[];
             ^~
